# futurehouse_mcp

./: .gitignore  README.md  USAGE.md  client_notebook.ipynb  main.py  mcp-config-stdio-debug.json  mcp-config-stdio.json  mcp-config.json  pyproject.toml  pytest.ini  run_battle_tests.py  simple_example.py  user_friendly_example.py
src/futurehouse_mcp/: __init__.py  server.py
test/: test_battle_integration.py  test_server.py
